--- a/views/updateEvent.html
+++ b/views/updateEvent.html
@@ -54,7 +54,7 @@
         <label class="label" for="title">Event Title</label>
         <input id="title" class="input" type="text" placeholder="Title" name="title">
         <label class="label" for="date">Event Date</label>
-        <input type="date" id="date" name="date_time" value="2020-04-15" min="2020-04-15" max="2025-12-31">
+        <input type="datetime-local" id="date" name="date_time" value="2020-04-15" min="2020-04-15" max="2025-12-31">
         
         <label class="label" for="purpose">Purpose of Event</label>
         <section class="control">
